# 6

./: progress.txt
1c/: info.txt
1c/l10/: 1Cv8.1CD  task.txt
1c/l11/: 1Cv8.1CD  task.txt
1c/l12/: 1Cv8.1CD  1Cv8tmp.1CD  task.txt
1c/l123/: 1Cv8.1CD  task.txt
1c/l13/: 1Cv8.1CD  task.txt
1c/l14/: 1Cv8.1CD  task.txt
1c/l15/: task.txt
1c/l16/: 1Cv8.1CD  task.txt
1c/l17/: 1Cv8.1CD  task.txt
1c/l18/: 1Cv8.1CD
1c/l19/: 1Cv8.1CD
1c/l20/: 1Cv8.1CD  task.txt
1c/l4/: 1Cv8.1CD  task.txt
1c/l5/: 1Cv8.1CD  task.txt
1c/l6/: 1Cv8.1CD  task.txt
1c/l7/: 1Cv8.1CD  task.txt
1c/l8/: 1Cv8.1CD  task.txt
1c/l9/: 1Cv8.1CD  task.txt
NIR/: 1.txt  2.txt  3.txt  4.txt  5.txt  info.txt  otchet.docx
econ/: info.txt
econ/p1/: p1.ods
econ/p10/: p10.xlsx
econ/p11/: p11.xlsx
econ/p12/: p12.xlsx
econ/p2/: info.txt  p2.xlsx
econ/p3/: info.txt  p3.ods
econ/p4/: info.txt  p4.ods
econ/p5/: Praktika5oborotnieEP.xlsx  info.txt
econ/p6/: Praktika6O.TR.xlsx  task.txt
econ/p7/: info.txt  p7.xlsx
econ/p8/: p8.xlsx
econ/p9/: p9.xlsx
econ/pr/: info.txt  pr.pptx  pr.txt
lfp/: info.txt
lfp/l1/: frame.drawio  (+7 more)
lfp/l2/: Cargo.toml  build.rs  l2.odt  profs.csv  task.txt
lfp/l2/db/: profs.csv  qp_mapping.csv  questions.csv
lfp/l2/src/: app.rs  main.rs
lfp/l2/ui/: app_window.slint  consult_page.slint  main_menu.slint  main_window.slint  model_adapter.slint  p_list.slint  page.slint  profession_page.slint  question_page.slint  sidebar.slint
pip/: info.txt
pocod/: info.txt
rimiss/: info.txt  pr.pptx  pr.txt
vk/: 05-04-2024.txt  15-03-2024.txt
(+84 files in other folders)
