[package]
name = "l2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
slint = { version = "1.5.1", features = ["serde"] }

[build-dependencies]
slint-build = "1.5.1"
